@startuml example7
!pragma useIntermediatePackages false

class example7.island1.Animal {
  island: None
  name: None
  x: None
  y: None
}
class example7.island1.Island {
  grid_size: None
  grid: None
}
class example7.island1.Predator {
}
class example7.island1.Prey {
}
example7.island1.Animal <|-- example7.island1.Predator
example7.island1.Animal <|-- example7.island1.Prey
footer Generated by //py2puml//
@enduml
